fix text overflow in screen

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ button {
 }
 #bigger-text {
   height: 64px;
-  font-size: 48px;
+  font-size: 45px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
